--- a/styles.css
+++ b/styles.css
@@ -363,11 +363,11 @@ button[style="display: none;"] {
 }
 
 .error-message {
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-weight: 600;
     color: red;
     margin-bottom: 20px;  /* Lägg till mellanrum under felmeddelandet */
     text-align: center;
-    background-color: rgba(255, 0, 0, 0.1);
 }
 
 /* Stil för "Try Again"-knappen */
