--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     height: 100%; /* Täck hela höjden */
     background-image: url('bakgrundnr2.jpg');
     background-position: center;
-    background-size: 150%;
+    background-size: 200%;
     z-index: -2; /* Placera bakgrunden under allt annat */
 }
 
@@ -149,7 +149,8 @@ body {
     align-items: center;
     background-color: black;
     padding: 1rem 2rem;
-    position: relative; /* Behåller navbaren i flödet */
+    position:fixed; /* Behåller navbaren i flödet */
+    width: 100%;
     z-index: 10; /* Se till att navbaren ligger ovanför kameran */
 }
 
