--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /* Ny wrapper för bakgrund */
 .background-container {
     position: fixed; /* Fixera bakgrunden så att den alltid är längst bak */
-    top: 80px;
+    top: 10%;
     left: 0;
     width: 100%;
     height: 100%; /* Täck hela höjden */
@@ -151,6 +151,7 @@ body {
     padding: 1rem 2rem;
     position:fixed; /* Behåller navbaren i flödet */
     width: 100%;
+    height: 10%;
     z-index: 10; /* Se till att navbaren ligger ovanför kameran */
 }
 
