--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: transparent;  /* Svart för resterande del */
+    background-color: black;
 }
 
 .content-container {
@@ -192,10 +192,10 @@ p {
 /* Scanner Page */
 .scanner-page {
     display: flex;
-    flex-direction: column; /* Ändra från row (default) till column */
-    align-items: center;   /* Centrera innehållet horisontellt */
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
-    gap: 20px;             /* Lägger till mellanrum mellan kameran och gästlistan */
+    gap: 20px;
 }
 
 /* Camera Viewer */
@@ -409,6 +409,7 @@ button[style="display: none;"] {
     color: #ffffff;
     padding-top: 0; /* Ingen extra padding här nu eftersom vi justerar top */
     z-index: 1; /* Se till att det ligger ovanpå bakgrunden */
+}
 
 .ticket-container {
     padding: 2rem;
@@ -486,6 +487,7 @@ button[style="display: none;"] {
     font-weight: 600;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 
 #guest-list {
     list-style: none;
