--- a/styles.css
+++ b/styles.css
@@ -510,7 +510,7 @@ button[style="display: none;"] {
 }
 
 #name-status-container {
-    margin-top: 20px;
+    margin-top: 10vh;
     text-align: center;
 }
 
