--- a/styles.css
+++ b/styles.css
@@ -537,8 +537,8 @@ button[style="display: none;"] {
     text-align: center;
     margin-top: 20px;
     animation: glow 1.5s infinite ease-in-out;
-    border: 2px solid rgba(255, 255, 255, 0.5);
     background-color: hsl(329.1, 84%, 69.02%);
+    border: none; /* Ta bort bordern här också om det behövs */
     border-radius: 15px;
 }
 
